adding final model

--- a/Final_modeling_notebook.ipynb
+++ b/Final_modeling_notebook.ipynb
@@ -46,9 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The reason as to why we chose to make our target size 256,256 is because our picture had high resolution, and making them images larger would allow us to capture more information about the picture.\n",
+    "The reason as to why we chose to make our target size 256,256 is because our pictures have high resolution. Making the images larger would allow us to capture more information about the picture.\n",
     "\n",
-    "We chose to shuffle the images in train and validation sets because we thought it would be beneficial in order to train our model to recongnize images it has not seen before. "
+    "We chose to shuffle the images in the train and validation sets because we wanted to train our model to get better at predicting unforseen images, having a shuffled set of images within each batch would help to do this. "
    ]
   },
   {
@@ -103,6 +103,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our baseline model we chose to use padding in order to preserve more information about the images through the training process. For this model we wanted less layers to see if the predictive power of a model with fewer layers would still be strong. The more layers added to the model the more computation is involved and the longer time the model takes to train.\n",
+    "\n",
+    "This model ultimately has less layers than our final model but it's predictive power is still strong."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -141,6 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading in our baseline model\n",
     "model = models.load_model('baseline_model')"
    ]
   },
@@ -221,9 +231,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Baseline Model**\n",
+    "From the results we can see that our model is fairly good at predicting both the majority and minority classes. For this problem we chose to focus on the precision metric. This is because properly diagnosing pneumonia is very important- letting someone who has pneumonia go untreated can be fatal, and treating someone for pneumonia when they don't have the illness, of course, is not optimal for many reasons."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Faster Model**\n",
     "\n",
-    "For this mode chose to have a smaller number of layers and convulutions in order to see how powerful the models predicitve power would be with a simpler model."
+    "For this mode chose to have a smaller number of layers and convolutions in order to see how powerful the models predictive power would be with a simpler structure. This models predictive power is about the same as our baseline model, and it marginally does better at predicting the minority class. "
    ]
   },
   {
@@ -232,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Baseline model\n",
+    "# Fast model\n",
     "model = models.Sequential()\n",
     "\n",
     "model.add(layers.Conv2D(16, (3, 3), activation='relu',padding='same',\n",
@@ -250,6 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loading in the model\n",
     "model = models.load_model('faster_model')"
    ]
   },
@@ -313,7 +331,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Final Model - Best Model**"
+    "The predictive power of this model is slightly weaker in comparison to our baseline. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Final Model - Best Model**\n",
+    "\n",
+    "Our final model is the most complex. It initially had double the layers and took double the amount of time to run. We wanted to see how it would run with less layers, and it preformed just as well. We were able to save some time running the model by doing this. "
    ]
   },
   {
@@ -362,6 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading in our best model\n",
     "model = models.load_model('best_model')"
    ]
   },
@@ -444,6 +472,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model preforms the best when it comes to predicting both the minority and majority class, and for this reason we chose this to be our final model. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -467,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
