compressing all notebooks into one folder

--- a/Pneumonia_Classification .ipynb
+++ b/Pneumonia_Classification .ipynb
@@ -446,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plotting the distribution of pixel intensity, or brightness, will help us clearly see where one class or type is more prominent. The more of that color in that regions, the more intense its pixels are in that region. This may suggest some special activity about the disease. We can use these images along with domain knowledge to make some insights. "
+    "Plotting the distribution of pixel intensity, or brightness, will help us clearly see where one class or type is more prominent. The more of that color in that region, the more intense its pixels are in that region. This may suggest some special activity about the disease. We can use these images along with domain knowledge to make some insights. "
    ]
   },
   {
@@ -897,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
